cicd/k3d-incluster-inference-gwapi/fixtures/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gw
  namespace: llm
spec:
  gatewayClassName: loxilb-gc
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
