cicd/k3d-incluster-inference-gwapi/fixtures/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: loxilb-gc
spec:
  controllerName: loxilb.io/loxilb
